# pandahandler

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: README.md  conf.py  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/doctrees/: environment.pickle
pandahandler/: __init__.py  indexes.py  schema.py  tabulation.py
pandahandler/frames/: columns.py  constants.py  filters.py  joiners.py  types.py
pandahandler/frames/decorators/: cleartype.py  demo.py  framesize.py
pandahandler/frames/filtering/: demo.py  filters.py  masks.py  masktools.py
pandahandler/frames/filtering/demo/: processing.py  run.py
pandahandler/sklearn/transforms/: categoricals.py
tests/: test_indexes.py  test_schema.py  test_tabulation.py
tests/frames/: test_columns.py  test_filters.py  test_joiners.py
tests/frames/decorators/: test_cleartype.py  test_demo.py  test_frame_decorators_demo.py  test_framesize.py
tests/frames/filtering/: test_filtering_demo_process.py  test_filters.py  test_masktools.py
tests/sklearn/transforms/: test_categoricals.py
